[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DP_epidemiology"
version = "0.0.4"

dependencies = [
  "pandas>=2.1.4",
  "numpy>=1.26.4",
  "opendp==0.11.1",
  "msrest==0.7.1",
  "antlr4-python3-runtime==4.13.2",
  "alabaster==0.7.16",
  "asttokens==2.4.1",
  "attrs==24.2.0",
  "babel==2.16.0",
  "backports.tarfile==1.2.0",
  "blinker==1.8.2",
  "build==1.2.2",
  "certifi==2024.8.30",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "colorama==0.4.6",
  "comm==0.2.2",
  "dash==2.18.1",
  "dash-core-components==2.0.0",
  "dash-html-components==2.0.0",
  "dash-table==5.0.0",
  "debugpy==1.8.1",
  "decorator==5.1.1",
  "docutils==0.20.1",
  "exceptiongroup==1.2.1",
  "executing==2.0.1",
  "fastjsonschema==2.20.0",
  "Flask==3.0.3",
  "idna==3.10",
  "imagesize==1.4.1",
  "importlib_metadata==8.5.0",
  "ipykernel==6.29.4",
  "ipython==8.25.0",
  "itsdangerous==2.2.0",
  "jaraco.classes==3.4.0",
  "jaraco.context==6.0.1",
  "jaraco.functools==4.0.2",
  "jedi==0.19.1",
  "Jinja2==3.1.4",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2023.12.1",
  "jupyter_client==8.6.2",
  "jupyter_core==5.7.2",
  "keyring==25.4.1",
  "markdown-it-py==3.0.0",
  "MarkupSafe==2.1.5",
  "matplotlib-inline==0.1.7",
  "mdurl==0.1.2",
  "more-itertools==10.5.0",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "nh3==0.2.18",
  "packaging==24.1",
  "parso==0.8.4",
  "pkginfo==1.10.0",
  "platformdirs==4.2.2",
  "plotly==5.24.1",
  "prompt_toolkit==3.0.47",
  "psutil==6.0.0",
  "pure-eval==0.2.2",
  "Pygments==2.18.0",
  "pyproject_hooks==1.1.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.2",
  "pyzmq==26.0.3",
  "referencing==0.35.1",
  "requests==2.32.3",
  "requests-toolbelt==1.0.0",
  "retrying==1.3.4",
  "rfc3986==2.0.0",
  "rich==13.8.1",
  "rpds-py==0.20.0",
  "six==1.16.0",
  "snowballstemmer==2.2.0",
  "Sphinx==7.4.7",
  "sphinx-rtd-theme==2.0.0",
  "sphinxcontrib-applehelp==2.0.0",
  "sphinxcontrib-devhelp==2.0.0",
  "sphinxcontrib-htmlhelp==2.1.0",
  "sphinxcontrib-jquery==4.1",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==2.0.0",
  "sphinxcontrib-serializinghtml==2.0.0",
  "stack-data==0.6.3",
  "tenacity==9.0.0",
  "tomli==2.0.1",
  "tornado==6.4.1",
  "traitlets==5.14.3",
  "twine==5.1.1",
  "typing_extensions==4.12.2",
  "tzdata==2024.2",
  "urllib3==2.2.3",
  "wcwidth==0.2.13",
  "Werkzeug==3.0.4",
  "zipp==3.20.2",
]

authors = [
  { name="Shubham Kumar", email="sk834rk@gmail.com" },
  { name="Milan Anand Raj", email="milananandraj1502@gmail.com" },
  { name="Divya Gupta", email="divygupt2002@gmail.com" },
]
description = "A package for differential private release of fianancial data in context of epidemiology"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pets-for-public-health-challenge.readthedocs.io/en/latest/"
repository = "https://github.com/KnowledgeEdgeAI/PETs_for_Public_Health_Challenge/tree/main"
