[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DP_epidemiology"
version = "0.0.7"

dependencies = [
  "pandas>=2.1.4",
  "numpy>=1.26.4",
  "opendp==0.11.1",
  "msrest==0.7.1",
  "antlr4-python3-runtime==4.13.2",
  "plotly",
  "dash",
  "nbformat",
  "scipy",
]

authors = [
  { name="Shubham Kumar", email="sk834rk@gmail.com" },
  { name="Milan Anand Raj", email="milananandraj1502@gmail.com" },
  { name="Divya Gupta", email="divygupt2002@gmail.com" },
]
description = "A package for differential private release of fianancial data in context of epidemiology"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pets-for-public-health-challenge.readthedocs.io/en/latest/"
repository = "https://github.com/KnowledgeEdgeAI/PETs_for_Public_Health_Challenge/tree/main"

[project.optional-dependencies]
dev = [
  "pytest"
]
